[gd_scene load_steps=3 format=3 uid="uid://cjq40ok7233s5"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_0spk2"]
[ext_resource type="Texture2D" uid="uid://b1q6q3nph0kw0" path="res://sprites/mm_bg.png" id="1_k3pf6"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_0spk2")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bg" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -86.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_k3pf6")
flip_h = true

[node name="OptionsBox" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="PlayButton" type="Button" parent="UI/OptionsBox"]
layout_mode = 2
text = "Play"

[node name="HighScoresButton" type="Button" parent="UI/OptionsBox"]
layout_mode = 2
text = "High Scores"

[node name="SettingsButton" type="Button" parent="UI/OptionsBox"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="UI/OptionsBox"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="UI/OptionsBox/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="UI/OptionsBox/HighScoresButton" to="." method="_on_high_scores_button_pressed"]
[connection signal="pressed" from="UI/OptionsBox/QuitButton" to="." method="_on_quit_button_pressed"]
